[ui] fixing data summary overflow css

--- a/packages/itmat-ui-react/src/components/datasetDetail/tabContent/data/tabContent.module.css
+++ b/packages/itmat-ui-react/src/components/datasetDetail/tabContent/data/tabContent.module.css
@@ -62,7 +62,13 @@
     background-color: rgba(156,156,156,0.1);
     padding: 1rem;
     margin-bottom: 2rem;
+    overflow: hidden;
+}
 
+.data_summary_section > div > div {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
 }
 
 .data_summary_section + h5 {
